[package]
name = "gru-wgpu"
version = "0.1.0"
edition = "2024"

[features]
webgpu = ["wgpu/webgpu"]
vulkan = ["wgpu/vulkan"]
dx12 = ["wgpu/dx12", "wgpu/static-dxc"] #broken currently?
metal = ["wgpu/metal"]
gles = ["wgpu/gles"] #broken currently?
webgl = ["wgpu/webgl"]

all = ["ui", "audio", "storage", "file"]
ui = ["dep:gru-ui"]
audio = ["dep:rodio"]
storage = ["dep:ahash", "dep:bincode", "web-sys/Storage"]
file = ["dep:flume", "web-sys/XmlHttpRequest", "web-sys/XmlHttpRequestResponseType", "dep:js-sys"]

[dependencies]
thiserror = "2.0.18"
winit = { version = "0.30.12", default-features = false, features = ["x11", "rwh_06"] }
wgpu = { version = "28.0.0", default-features = false, features = ["wgsl"] }
gru-misc = { path = "../gru-misc", features = ["math"] }
gru-ui = { path = "../gru-ui", optional = true }
rodio = { version = "0.21.1", default-features = false, features = ["wasm-bindgen", "vorbis", "playback"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.1.0"
pollster = "0.4.0"
ahash = { version = "0.8.12", default-features = false, features = ["no-rng", "std", "serde"], optional = true }
bincode = { version = "1.3.3", optional = true } #version 1.3.3 considered complete after drama and development stop
flume = { version = "0.12.0", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Window", "Document", "Element", "HtmlCanvasElement", "Performance"] }
js-sys = { version = "0.3.85", optional = true }
